--- a/granitetable/package.json
+++ b/granitetable/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-animation": "^1.2.2",
     "react-dom": "^17.0.1",
+    "react-fade-in": "^1.1.1",
+    "react-hook-form": "^6.9.6",
+    "react-material-ui-carousel": "^2.0.2",
     "react-scripts": "3.4.4"
   },
   "scripts": {
