--- a/granitetable/package.json
+++ b/granitetable/package.json
@@ -14,6 +14,7 @@
 		"react-animation": "^1.2.2",
 		"react-dom": "^17.0.1",
 		"react-fade-in": "^1.1.1",
+		"react-google-recaptcha": "^2.1.0",
 		"react-hook-form": "^6.9.6",
 		"react-material-ui-carousel": "^2.0.2",
 		"react-scripts": "3.4.4"
@@ -22,7 +23,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -39,5 +41,9 @@
 			"last 1 safari version"
 		]
 	},
-	"homepage": "./"
+	"homepage": "http://rams3ska.github.io/granitetable",
+	"proxy": "http://localhost:3000",
+	"devDependencies": {
+		"gh-pages": "^3.1.0"
+	}
 }
